--- a/audio.html
+++ b/audio.html
@@ -5,7 +5,8 @@
 
 <body>
 <h1><center>Cancion Generada con IA</center></h1>
-  <audio src="audio.mp3" controls></audio>
+  <audio src "audio.mp3" controls></audio>
    <br><a href="index.html">Volver al inicio</a>
 </body>
 </html>
+
