--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="Audio.html">Ir al Audio</a>
          <a href="Cuestionario.html">Cuestionario</a>
         <a href="IGCSE.HTML">Cuestionario IGCSE</a>
-          <br><a href="CUESTIONARIO.HTML">Volver al inicio</a><br>
+          <br><a href="CUESTIONARIO.HTML">CUESTIONARIO</a><br>
     </body>
     
     
